antlr4_runtime_public_includes = include_directories(
    'src/atn',
    'src/dfa',
    'src/internal',
    'src/misc',
    'src/support',
    'src/tree',
    'src/tree/pattern',
    'src/tree/xpath',
    'src',
)

install_headers(
    'src/ANTLRErrorListener.h',
    'src/ANTLRErrorStrategy.h',
    'src/ANTLRFileStream.h',
    'src/ANTLRInputStream.h',
    'src/BailErrorStrategy.h',
    'src/BaseErrorListener.h',
    'src/BufferedTokenStream.h',
    'src/CharStream.h',
    'src/CommonToken.h',
    'src/CommonTokenFactory.h',
    'src/CommonTokenStream.h',
    'src/ConsoleErrorListener.h',
    'src/DefaultErrorStrategy.h',
    'src/DiagnosticErrorListener.h',
    'src/Exceptions.h',
    'src/FailedPredicateException.h',
    'src/FlatHashMap.h',
    'src/FlatHashSet.h',
    'src/InputMismatchException.h',
    'src/IntStream.h',
    'src/InterpreterRuleContext.h',
    'src/Lexer.h',
    'src/LexerInterpreter.h',
    'src/LexerNoViableAltException.h',
    'src/ListTokenSource.h',
    'src/NoViableAltException.h',
    'src/Parser.h',
    'src/ParserInterpreter.h',
    'src/ParserRuleContext.h',
    'src/ProxyErrorListener.h',
    'src/RecognitionException.h',
    'src/Recognizer.h',
    'src/RuleContext.h',
    'src/RuleContextWithAltNum.h',
    'src/RuntimeMetaData.h',
    'src/Token.h',
    'src/TokenFactory.h',
    'src/TokenSource.h',
    'src/TokenStream.h',
    'src/TokenStreamRewriter.h',
    'src/UnbufferedCharStream.h',
    'src/UnbufferedTokenStream.h',
    'src/Version.h',
    'src/Vocabulary.h',
    'src/WritableToken.h',
    'src/antlr4-common.h',
    'src/antlr4-runtime.h',
    subdir: 'antlr4-runtime/',
)

install_headers(
    'src/atn/ATN.h',
    'src/atn/ATNConfig.h',
    'src/atn/ATNConfigSet.h',
    'src/atn/ATNDeserializationOptions.h',
    'src/atn/ATNDeserializer.h',
    'src/atn/ATNSimulator.h',
    'src/atn/ATNState.h',
    'src/atn/ATNStateType.h',
    'src/atn/ATNType.h',
    'src/atn/ActionTransition.h',
    'src/atn/AmbiguityInfo.h',
    'src/atn/ArrayPredictionContext.h',
    'src/atn/AtomTransition.h',
    'src/atn/BasicBlockStartState.h',
    'src/atn/BasicState.h',
    'src/atn/BlockEndState.h',
    'src/atn/BlockStartState.h',
    'src/atn/ContextSensitivityInfo.h',
    'src/atn/DecisionEventInfo.h',
    'src/atn/DecisionInfo.h',
    'src/atn/DecisionState.h',
    'src/atn/EpsilonTransition.h',
    'src/atn/ErrorInfo.h',
    'src/atn/LL1Analyzer.h',
    'src/atn/LexerATNConfig.h',
    'src/atn/LexerATNSimulator.h',
    'src/atn/LexerAction.h',
    'src/atn/LexerActionExecutor.h',
    'src/atn/LexerActionType.h',
    'src/atn/LexerChannelAction.h',
    'src/atn/LexerCustomAction.h',
    'src/atn/LexerIndexedCustomAction.h',
    'src/atn/LexerModeAction.h',
    'src/atn/LexerMoreAction.h',
    'src/atn/LexerPopModeAction.h',
    'src/atn/LexerPushModeAction.h',
    'src/atn/LexerSkipAction.h',
    'src/atn/LexerTypeAction.h',
    'src/atn/LookaheadEventInfo.h',
    'src/atn/LoopEndState.h',
    'src/atn/NotSetTransition.h',
    'src/atn/OrderedATNConfigSet.h',
    'src/atn/ParseInfo.h',
    'src/atn/ParserATNSimulator.h',
    'src/atn/ParserATNSimulatorOptions.h',
    'src/atn/PlusBlockStartState.h',
    'src/atn/PlusLoopbackState.h',
    'src/atn/PrecedencePredicateTransition.h',
    'src/atn/PredicateEvalInfo.h',
    'src/atn/PredicateTransition.h',
    'src/atn/PredictionContext.h',
    'src/atn/PredictionContextCache.h',
    'src/atn/PredictionContextMergeCache.h',
    'src/atn/PredictionContextMergeCacheOptions.h',
    'src/atn/PredictionContextType.h',
    'src/atn/PredictionMode.h',
    'src/atn/ProfilingATNSimulator.h',
    'src/atn/RangeTransition.h',
    'src/atn/RuleStartState.h',
    'src/atn/RuleStopState.h',
    'src/atn/RuleTransition.h',
    'src/atn/SemanticContext.h',
    'src/atn/SemanticContextType.h',
    'src/atn/SerializedATNView.h',
    'src/atn/SetTransition.h',
    'src/atn/SingletonPredictionContext.h',
    'src/atn/StarBlockStartState.h',
    'src/atn/StarLoopEntryState.h',
    'src/atn/StarLoopbackState.h',
    'src/atn/TokensStartState.h',
    'src/atn/Transition.h',
    'src/atn/TransitionType.h',
    'src/atn/WildcardTransition.h',
    subdir: 'antlr4-runtime/atn',
)

install_headers(
    'src/dfa/DFA.h',
    'src/dfa/DFASerializer.h',
    'src/dfa/DFAState.h',
    'src/dfa/LexerDFASerializer.h',
    subdir: 'antlr4-runtime/dfa',
)

install_headers(
    'src/internal/Synchronization.h',
    subdir: 'antlr4-runtime/internal',
)

install_headers(
    'src/misc/InterpreterDataReader.h',
    'src/misc/Interval.h',
    'src/misc/IntervalSet.h',
    'src/misc/MurmurHash.h',
    'src/misc/Predicate.h',
    subdir: 'antlr4-runtime/misc',
)

install_headers(
    'src/support/Any.h',
    'src/support/Arrays.h',
    'src/support/BitSet.h',
    'src/support/CPPUtils.h',
    'src/support/Casts.h',
    'src/support/Declarations.h',
    'src/support/StringUtils.h',
    'src/support/Unicode.h',
    'src/support/Utf8.h',
    subdir: 'antlr4-runtime/support',
)

install_headers(
    'src/tree/AbstractParseTreeVisitor.h',
    'src/tree/ErrorNode.h',
    'src/tree/ErrorNodeImpl.h',
    'src/tree/IterativeParseTreeWalker.h',
    'src/tree/ParseTree.h',
    'src/tree/ParseTreeListener.h',
    'src/tree/ParseTreeProperty.h',
    'src/tree/ParseTreeType.h',
    'src/tree/ParseTreeVisitor.h',
    'src/tree/ParseTreeWalker.h',
    'src/tree/TerminalNode.h',
    'src/tree/TerminalNodeImpl.h',
    'src/tree/Trees.h',
    subdir: 'antlr4-runtime/tree',
)

install_headers(
    'src/tree/pattern/Chunk.h',
    'src/tree/pattern/ParseTreeMatch.h',
    'src/tree/pattern/ParseTreePattern.h',
    'src/tree/pattern/ParseTreePatternMatcher.h',
    'src/tree/pattern/RuleTagToken.h',
    'src/tree/pattern/TagChunk.h',
    'src/tree/pattern/TextChunk.h',
    'src/tree/pattern/TokenTagToken.h',
    subdir: 'antlr4-runtime/tree/pattern',
)

install_headers(
    'src/tree/xpath/XPath.h',
    'src/tree/xpath/XPathElement.h',
    'src/tree/xpath/XPathLexer.h',
    'src/tree/xpath/XPathLexerErrorListener.h',
    'src/tree/xpath/XPathRuleAnywhereElement.h',
    'src/tree/xpath/XPathRuleElement.h',
    'src/tree/xpath/XPathTokenAnywhereElement.h',
    'src/tree/xpath/XPathTokenElement.h',
    'src/tree/xpath/XPathWildcardAnywhereElement.h',
    'src/tree/xpath/XPathWildcardElement.h',
    subdir: 'antlr4-runtime/tree/xpath',
)

antlr4_runtime_srcs = files(
    'src/ANTLRErrorListener.cpp',
    'src/ANTLRErrorStrategy.cpp',
    'src/ANTLRFileStream.cpp',
    'src/ANTLRInputStream.cpp',
    'src/BailErrorStrategy.cpp',
    'src/BaseErrorListener.cpp',
    'src/BufferedTokenStream.cpp',
    'src/CharStream.cpp',
    'src/CommonToken.cpp',
    'src/CommonTokenFactory.cpp',
    'src/CommonTokenStream.cpp',
    'src/ConsoleErrorListener.cpp',
    'src/DefaultErrorStrategy.cpp',
    'src/DiagnosticErrorListener.cpp',
    'src/Exceptions.cpp',
    'src/FailedPredicateException.cpp',
    'src/InputMismatchException.cpp',
    'src/IntStream.cpp',
    'src/InterpreterRuleContext.cpp',
    'src/Lexer.cpp',
    'src/LexerInterpreter.cpp',
    'src/LexerNoViableAltException.cpp',
    'src/ListTokenSource.cpp',
    'src/NoViableAltException.cpp',
    'src/Parser.cpp',
    'src/ParserInterpreter.cpp',
    'src/ParserRuleContext.cpp',
    'src/ProxyErrorListener.cpp',
    'src/RecognitionException.cpp',
    'src/Recognizer.cpp',
    'src/RuleContext.cpp',
    'src/RuleContextWithAltNum.cpp',
    'src/RuntimeMetaData.cpp',
    'src/Token.cpp',
    'src/TokenSource.cpp',
    'src/TokenStream.cpp',
    'src/TokenStreamRewriter.cpp',
    'src/UnbufferedCharStream.cpp',
    'src/UnbufferedTokenStream.cpp',
    'src/Vocabulary.cpp',
    'src/WritableToken.cpp',
    'src/atn/ATN.cpp',
    'src/atn/ATNConfig.cpp',
    'src/atn/ATNConfigSet.cpp',
    'src/atn/ATNDeserializationOptions.cpp',
    'src/atn/ATNDeserializer.cpp',
    'src/atn/ATNSimulator.cpp',
    'src/atn/ATNState.cpp',
    'src/atn/ATNStateType.cpp',
    'src/atn/ActionTransition.cpp',
    'src/atn/AmbiguityInfo.cpp',
    'src/atn/ArrayPredictionContext.cpp',
    'src/atn/AtomTransition.cpp',
    'src/atn/ContextSensitivityInfo.cpp',
    'src/atn/DecisionEventInfo.cpp',
    'src/atn/DecisionInfo.cpp',
    'src/atn/DecisionState.cpp',
    'src/atn/EpsilonTransition.cpp',
    'src/atn/ErrorInfo.cpp',
    'src/atn/LL1Analyzer.cpp',
    'src/atn/LexerATNConfig.cpp',
    'src/atn/LexerATNSimulator.cpp',
    'src/atn/LexerAction.cpp',
    'src/atn/LexerActionExecutor.cpp',
    'src/atn/LexerChannelAction.cpp',
    'src/atn/LexerCustomAction.cpp',
    'src/atn/LexerIndexedCustomAction.cpp',
    'src/atn/LexerModeAction.cpp',
    'src/atn/LexerMoreAction.cpp',
    'src/atn/LexerPopModeAction.cpp',
    'src/atn/LexerPushModeAction.cpp',
    'src/atn/LexerSkipAction.cpp',
    'src/atn/LexerTypeAction.cpp',
    'src/atn/LookaheadEventInfo.cpp',
    'src/atn/NotSetTransition.cpp',
    'src/atn/OrderedATNConfigSet.cpp',
    'src/atn/ParseInfo.cpp',
    'src/atn/ParserATNSimulator.cpp',
    'src/atn/PrecedencePredicateTransition.cpp',
    'src/atn/PredicateEvalInfo.cpp',
    'src/atn/PredicateTransition.cpp',
    'src/atn/PredictionContext.cpp',
    'src/atn/PredictionContextCache.cpp',
    'src/atn/PredictionContextMergeCache.cpp',
    'src/atn/PredictionMode.cpp',
    'src/atn/ProfilingATNSimulator.cpp',
    'src/atn/RangeTransition.cpp',
    'src/atn/RuleTransition.cpp',
    'src/atn/SemanticContext.cpp',
    'src/atn/SetTransition.cpp',
    'src/atn/SingletonPredictionContext.cpp',
    'src/atn/StarLoopbackState.cpp',
    'src/atn/Transition.cpp',
    'src/atn/TransitionType.cpp',
    'src/atn/WildcardTransition.cpp',
    'src/dfa/DFA.cpp',
    'src/dfa/DFASerializer.cpp',
    'src/dfa/DFAState.cpp',
    'src/dfa/LexerDFASerializer.cpp',
    'src/internal/Synchronization.cpp',
    'src/misc/InterpreterDataReader.cpp',
    'src/misc/Interval.cpp',
    'src/misc/IntervalSet.cpp',
    'src/misc/MurmurHash.cpp',
    'src/misc/Predicate.cpp',
    'src/support/Any.cpp',
    'src/support/Arrays.cpp',
    'src/support/CPPUtils.cpp',
    'src/support/StringUtils.cpp',
    'src/support/Utf8.cpp',
    'src/tree/ErrorNodeImpl.cpp',
    'src/tree/IterativeParseTreeWalker.cpp',
    'src/tree/ParseTree.cpp',
    'src/tree/ParseTreeListener.cpp',
    'src/tree/ParseTreeVisitor.cpp',
    'src/tree/ParseTreeWalker.cpp',
    'src/tree/TerminalNodeImpl.cpp',
    'src/tree/Trees.cpp',
    'src/tree/pattern/Chunk.cpp',
    'src/tree/pattern/ParseTreeMatch.cpp',
    'src/tree/pattern/ParseTreePattern.cpp',
    'src/tree/pattern/ParseTreePatternMatcher.cpp',
    'src/tree/pattern/RuleTagToken.cpp',
    'src/tree/pattern/TagChunk.cpp',
    'src/tree/pattern/TextChunk.cpp',
    'src/tree/pattern/TokenTagToken.cpp',
    'src/tree/xpath/XPath.cpp',
    'src/tree/xpath/XPathElement.cpp',
    'src/tree/xpath/XPathLexer.cpp',
    'src/tree/xpath/XPathLexerErrorListener.cpp',
    'src/tree/xpath/XPathRuleAnywhereElement.cpp',
    'src/tree/xpath/XPathRuleElement.cpp',
    'src/tree/xpath/XPathTokenAnywhereElement.cpp',
    'src/tree/xpath/XPathTokenElement.cpp',
    'src/tree/xpath/XPathWildcardAnywhereElement.cpp',
    'src/tree/xpath/XPathWildcardElement.cpp',
)

antlr4_runtime_library = library(
    'antl4-runtime',
    antlr4_runtime_srcs,
    include_directories: [antlr4_runtime_public_includes],
    install: true,
)

antlr4_runtime_dep = declare_dependency(
    include_directories: [antlr4_runtime_public_includes],
    link_with: [antlr4_runtime_library],
)